# AlgojourneyCpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Exam/: K-way-merge.cpp  Xor.cpp  backKnap-variant.cpp  demon.cpp  mei-toy.cpp  q1.cpp  query-number.cpp
array/: circular_array_loop.cpp
array&string/: substring_series.cpp
array_string/: CMakeLists.txt  circular_array_loop.cpp  subarray_search.cpp  substring_series.cpp
backtracking/: CMakeLists.txt  array_partition.cpp  boardgame.cpp  dfsSearch.cpp  memorize_search.cpp  nQueen.cpp  palindrome_partition.cpp  restore_ip.cpp  robotWandering.cpp  soduku.cpp  subSet.cpp
binary_tree/: CMakeLists.txt  bst.cpp  tree_cascade.cpp  tree_distance.cpp
common_algo/: CMakeLists.txt  KthMaximum.cpp  Kth_maximum.cpp  extendPartialSum.cpp  kmpMatch.cpp  kmp_match.cpp  kthPriorityQueue.cpp  kth_minimum.cpp
contest/: c1.cpp  c2.cpp  c3.cpp  cctemplate.cpp
contest_leetcode/: eliminateMonster.cpp  haoNumber.cpp
data_structure_design/: MKAverage.cpp
design/: medianFinder.cpp
dp/: CMakeLists.txt  LIS.cpp  backPack.cpp  back_pack.cpp  check_palindrome.cpp  coin_change.cpp  cut_palindrome.cpp  house_robber.cpp  palindrome_series.cpp  stock_market.cpp  wordBreak.cpp  word_break.cpp
for-practice-purposes/: basic_io.cpp  smartEdit.cpp
graph/: CMakeLists.txt  RedundantConnection.cpp  Tarjan.cpp  Topology.cpp  grid_dfs.cpp  redundant_connection.cpp  shortest_path.cpp  traffic_route.cpp  wordLadder.cpp  word_ladder.cpp
include/: NumTrie.h  Trie.cpp  Trie.h  algo_memo.cpp  algo_memo.h  biIndexTree.h  common.h  indexed_priority_queue.h
interview/: CMakeLists.txt  bit_ops.cpp  consecutive_ones.cpp  exam1.cpp  exam2.cpp  exam3.cpp  fibo.cpp  longest_consective_sequence.cpp  main.cpp  remove_duplicate_num.cpp  subnetValidation.cpp  valid_ip_mask.cpp
leetcode_contest/: lc_40_xinsuan_challenge.cpp
nested_structure/: nested_decode.cpp
numberTheory/: integerBreak.cpp  prime.cpp  xorSum.cpp
series_problem/: jump_game.cpp  stone_game.cpp
slidingWindow/: smallestCover.cpp
sort_greedy/: CMakeLists.txt  external_data_manager_optimized.cpp  mergeSortExt.cpp  merge_sort_ext.cpp  mmap_sort_test.cpp  multiway_merge.cpp  searchInSortedArray.cpp  search_sorted_array.cpp  task_manager.cpp  task_schedule.cpp  workAssign.cpp
stack_related/: CMakeLists.txt  expression_eval.cpp  lisp_parser.cpp  monotonous_stack.cpp  stack_min_element.cpp  stack_pop_sequence.cpp
test/: CMakeLists.txt  biIndextreeTest.cpp  indexPQTest.cpp
tmp/: captureKong.cpp  string_io.cpp  topKfreq.cpp
