#in this subdirectory, i want to add these executables corresponding to the source files
# what does these executables do?

add_executable(array_partition array_partition.cpp)
add_executable(boardgame boardgame.cpp)
add_executable(dfsSearch dfsSearch.cpp)
add_executable(memorize_search memorize_search.cpp)
add_executable(nQueen nQueen.cpp)
add_executable(palindrome_partition palindrome_partition.cpp)
add_executable(restore_ip restore_ip.cpp)
add_executable(robotWandering robotWandering.cpp)
add_executable(subSet subSet.cpp)
add_executable(soduku soduku.cpp)